--- a/app/src/main/res/layout-v21/activity_pay.xml
+++ b/app/src/main/res/layout-v21/activity_pay.xml
@@ -4,17 +4,17 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:theme="@style/AppTheme.AppBarOverlay" />
 
     <android.support.v7.widget.Toolbar
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:background="?attr/colorPrimary"
-        app:popupTheme="@style/AppTheme.PopupOverlay" />
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -25,108 +25,13 @@
         android:padding="10dp"
         android:textColor="#6c6c6c"
         android:layout_alignParentTop="true"
-        android:layout_alignLeft="@+id/radioButton"
-        android:layout_alignStart="@+id/radioButton"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp" />
-
-    <RadioButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/radio_btn"
-        android:id="@+id/radioButton"
-        android:checked="true"
-        android:textSize="18sp"
-        android:layout_below="@+id/textView8"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="10dp" />
-
-    <RadioButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/radio_btn2"
-        android:id="@+id/radioButton2"
-        android:checked="false"
-        android:layout_below="@+id/textView8"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="52dp"
-        android:layout_marginEnd="52dp"
-        android:textSize="18sp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/tv_pay"
-        android:id="@+id/textView9"
-        android:paddingLeft="15dp"
-        android:textColor="#6c6c6c"
-        android:layout_below="@+id/radioButton"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="40dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/tv_no"
-        android:id="@+id/textView10"
-        android:textColor="#6c6c6c"
-        android:layout_alignTop="@+id/textView9"
-        android:layout_alignRight="@+id/radioButton2"
-        android:layout_alignEnd="@+id/radioButton2" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/tv_ac"
-        android:id="@+id/textView11"
-        android:paddingLeft="15dp"
-        android:textColor="#6c6c6c"
-        android:layout_below="@+id/textView9"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="40dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/tv_pr"
-        android:id="@+id/textView12"
-        android:textColor="#6c6c6c"
-        android:layout_alignTop="@+id/textView11"
-        android:layout_alignRight="@+id/textView10"
-        android:layout_alignEnd="@+id/textView10" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/tv_amnt"
-        android:id="@+id/textView13"
-        android:paddingLeft="15dp"
-        android:textColor="#6c6c6c"
-        android:layout_below="@+id/textView11"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="40dp" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText7"
-        android:inputType="number"
-        android:layout_alignTop="@+id/textView13"
-        android:layout_alignRight="@+id/textView12"
-        android:layout_alignEnd="@+id/textView12"
-        android:layout_toRightOf="@+id/textView11"
-        android:layout_toEndOf="@+id/textView11" />
+        android:layout_marginTop="70dp"
+        android:layout_marginBottom="20dp"
+        android:layout_alignRight="@+id/textView"
+        android:layout_alignEnd="@+id/textView"
+        android:layout_alignLeft="@+id/textView"
+        android:layout_alignStart="@+id/textView"
+        android:textSize="25dp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -134,12 +39,40 @@
         android:text="@string/btn_send"
         android:id="@+id/btn_send"
         android:paddingLeft="20dp"
-        android:layout_below="@+id/editText7"
-        android:layout_marginTop="45dp"
-        android:layout_alignRight="@+id/editText7"
-        android:layout_alignEnd="@+id/editText7"
         android:background="#d15351"
+        android:layout_below="@+id/textView"
+        android:layout_marginTop="60dp"
+        android:textAlignment="center"
+        android:textColor="#fff"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginLeft="20dp" />
-</RelativeLayout>
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Lipa na m-Pesa  Pay bill No. 102345"
+        android:id="@+id/textView"
+        android:layout_below="@+id/textView8"
+        android:textSize="22dp"
+        android:layout_alignRight="@+id/btn_send"
+        android:layout_alignEnd="@+id/btn_send"
+        android:layout_alignLeft="@+id/btn_send"
+        android:layout_alignStart="@+id/btn_send" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Decline"
+        android:id="@+id/btn_decline"
+        android:layout_below="@+id/btn_send"
+        android:layout_alignRight="@+id/btn_send"
+        android:layout_alignEnd="@+id/btn_send"
+        android:layout_marginTop="66dp"
+        android:layout_alignLeft="@+id/btn_send"
+        android:layout_alignStart="@+id/btn_send"
+        android:background="#d15351"
+        android:textColor="#fff" /></RelativeLayout>
