--- a/app/src/main/res/layout/activity_pay.xml
+++ b/app/src/main/res/layout/activity_pay.xml
@@ -3,6 +3,17 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent">
 
+    <android.support.v7.widget.Toolbar
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/toolbar"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="?attr/colorPrimary"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:contextClickable="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -10,124 +21,95 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/tv_string"
         android:id="@+id/textView8"
-        android:padding="10dp"
         android:textColor="#6c6c6c"
         android:layout_alignParentTop="true"
-        android:layout_alignLeft="@+id/radioButton"
-        android:layout_alignStart="@+id/radioButton"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="20dp"
+        android:textSize="22dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="15dp"
+        android:layout_alignRight="@+id/textView3"
+        android:layout_alignEnd="@+id/textView3"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp" />
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="#d15351"
+        android:layout_weight="1"
+        android:text="@string/btn_send"
+        android:id="@+id/btn_send"
+        android:layout_marginLeft="5dp"
+        android:textColor="#fff"
+        android:layout_marginTop="5dp"
+        android:layout_below="@+id/radioButton3"
+        android:layout_alignLeft="@+id/radioButton3"
+        android:layout_alignStart="@+id/radioButton3"
+        android:layout_marginBottom="5dp"
+        android:layout_alignRight="@+id/radioButton3"
+        android:layout_alignEnd="@+id/radioButton3" />
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="#d15351"
+        android:layout_weight="1"
+        android:text="Decline"
+        android:id="@+id/button"
+        android:textColor="#fff"
+        android:layout_marginTop="52dp"
+        android:layout_below="@+id/btn_send"
+        android:layout_alignRight="@+id/radioButton3"
+        android:layout_alignEnd="@+id/radioButton3"
+        android:layout_alignLeft="@+id/btn_send"
+        android:layout_alignStart="@+id/btn_send" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Pay via :"
+        android:id="@+id/textView3"
+        android:layout_below="@+id/textView8"
+        android:layout_alignRight="@+id/button"
+        android:layout_alignEnd="@+id/button"
+        android:textColor="#6c6c6c"
+        android:textSize="20dp"
+        android:padding="2dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="15dp" />
+
+    <RadioButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cash"
+        android:id="@+id/radioBtn"
+        android:checked="false"
+        android:textColor="#6c6c6c"
+        android:textSize="20dp"
+        android:padding="2dp"
+        android:layout_below="@+id/textView3"
+        android:layout_alignLeft="@+id/textView3"
+        android:layout_alignStart="@+id/textView3"
         android:layout_marginBottom="20dp" />
 
     <RadioButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/radio_btn"
-        android:id="@+id/radioButton"
+        android:text="Lipa na m-Pesa, pay bill no. 123654"
+        android:id="@+id/radioButton3"
         android:checked="true"
-        android:textSize="18sp"
-        android:layout_below="@+id/textView8"
+        android:layout_below="@+id/radioBtn"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginLeft="10dp" />
-
-    <RadioButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/radio_btn2"
-        android:id="@+id/radioButton2"
-        android:checked="false"
-        android:layout_below="@+id/textView8"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="52dp"
-        android:layout_marginEnd="52dp"
-        android:textSize="18sp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/tv_pay"
-        android:id="@+id/textView9"
-        android:paddingLeft="15dp"
+        android:textSize="20dp"
         android:textColor="#6c6c6c"
-        android:layout_below="@+id/radioButton"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="40dp" />
+        android:padding="2dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginBottom="20dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/tv_no"
-        android:id="@+id/textView10"
-        android:textColor="#6c6c6c"
-        android:layout_alignTop="@+id/textView9"
-        android:layout_alignRight="@+id/radioButton2"
-        android:layout_alignEnd="@+id/radioButton2" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/tv_ac"
-        android:id="@+id/textView11"
-        android:paddingLeft="15dp"
-        android:textColor="#6c6c6c"
-        android:layout_below="@+id/textView9"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="40dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/tv_pr"
-        android:id="@+id/textView12"
-        android:textColor="#6c6c6c"
-        android:layout_alignTop="@+id/textView11"
-        android:layout_alignRight="@+id/textView10"
-        android:layout_alignEnd="@+id/textView10" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/tv_amnt"
-        android:id="@+id/textView13"
-        android:paddingLeft="15dp"
-        android:textColor="#6c6c6c"
-        android:layout_below="@+id/textView11"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="40dp" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText7"
-        android:inputType="number"
-        android:layout_alignTop="@+id/textView13"
-        android:layout_alignRight="@+id/textView12"
-        android:layout_alignEnd="@+id/textView12"
-        android:layout_toRightOf="@+id/textView11"
-        android:layout_toEndOf="@+id/textView11" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/btn_send"
-        android:id="@+id/btn_send"
-        android:paddingLeft="20dp"
-        android:layout_below="@+id/editText7"
-        android:layout_marginTop="45dp"
-        android:layout_alignRight="@+id/editText7"
-        android:layout_alignEnd="@+id/editText7"
-        android:background="#d15351"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="20dp" />
 </RelativeLayout>
