--- a/app/src/main/res/layout/activity_thanks.xml
+++ b/app/src/main/res/layout/activity_thanks.xml
@@ -7,31 +7,29 @@
     android:fitsSystemWindows="true"
     tools:context="com.jshikami235gmail.pataride.thanks">
 
+
+
     <android.support.design.widget.AppBarLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:theme="@style/AppTheme.AppBarOverlay" />
+        android:theme="@style/AppTheme.AppBarOverlay"/>
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+    <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarTabBarStyle"
+        android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/tv_thanks"
         android:layout_alignParentTop="true"
         android:id="@+id/textView2"
-        android:layout_marginTop="70dp"
+        android:textColor="#6c6c6c"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="0dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp" />
 
@@ -39,11 +37,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/man"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
         android:contentDescription="pic"
-
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
         android:layout_below="@+id/textView2"
         android:layout_marginBottom="150dp"
         android:id="@+id/imageView" />
@@ -56,5 +53,4 @@
         android:layout_alignLeft="@+id/textView2"
         android:layout_alignStart="@+id/textView2"
         android:layout_marginBottom="100dp"
-        android:layout_marginLeft="10dp" />
-</RelativeLayout>
+        android:layout_marginLeft="10dp" /></RelativeLayout>
