--- a/app/src/main/res/layout/content_thanks.xml
+++ b/app/src/main/res/layout/content_thanks.xml
@@ -7,25 +7,16 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.jshikami235gmail.pataride.thanks">
 
-  <android.support.design.widget.AppBarLayout
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:theme="@style/AppTheme.AppBarOverlay"/>
-
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/tv_thanks"
         android:layout_alignParentTop="true"
         android:id="@+id/textView2"
+        android:textColor="#6c6c6c"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="0dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp" />
 
@@ -37,10 +28,6 @@
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
         android:contentDescription="pic"
-
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
         android:layout_below="@+id/textView2"
         android:layout_marginBottom="150dp"
         android:id="@+id/imageView" />
