--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -1,66 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-
-    tools:context="com.jshikami235gmail.pataride.Login">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/tv_mail"
-        android:id="@+id/textView14"
-        android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@+id/editText8"
-        android:layout_toStartOf="@+id/editText8"
-        android:layout_marginTop="20dp" />
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:showIn="@layout/activity_login2"
+    tools:context="com.jshikami235gmail.pataride.login">
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:ems="10"
-        android:id="@+id/editText8"
-        android:layout_below="@+id/textView14"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/tv_pswd"
-        android:id="@+id/textView15"
-        android:layout_marginTop="51dp"
-        android:layout_below="@+id/editText8"
-        android:layout_alignLeft="@+id/textView14"
-        android:layout_alignStart="@+id/textView14" />
+        android:hint="@string/hint"
+        android:textColor="#6c6c6c"
+        android:id="@+id/email_l"
+        android:layout_alignLeft="@+id/pwd_l"
+        android:layout_alignStart="@+id/pwd_l" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/editText9"
-        android:layout_below="@+id/textView15"
+        android:textColor="#6c6c6c"
+        android:id="@+id/pwd_l"
+        android:hint="@string/pwd_hint"
+        android:layout_marginTop="50dp"
+        android:layout_below="@+id/email_l"
         android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sign in"
-        android:background="#cf4848"
+        android:text="@string/sign_In"
+        android:onClick="onClick"
+        android:textColor="#fff"
+        android:background="#d15351"
         android:id="@+id/btn_signIn"
-        android:layout_marginTop="61dp"
-        android:layout_below="@+id/editText9"
-        android:layout_alignRight="@+id/editText9"
-        android:layout_alignEnd="@+id/editText9"
-        android:layout_alignLeft="@+id/editText9"
-        android:layout_alignStart="@+id/editText9" />
+        android:layout_below="@+id/pwd_l"
+        android:layout_alignLeft="@+id/pwd_l"
+        android:layout_alignStart="@+id/pwd_l"
+        android:layout_marginTop="53dp"
+        android:layout_alignRight="@+id/pwd_l"
+        android:layout_alignEnd="@+id/pwd_l" />
+
 </RelativeLayout>
