--- a/app/src/main/res/layout/content_thanks.xml
+++ b/app/src/main/res/layout/content_thanks.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:showIn="@layout/activity_thanks2"
     tools:context="com.jshikami235gmail.pataride.thanks">
 
     <TextView
@@ -15,7 +18,6 @@
         android:layout_alignParentTop="true"
         android:id="@+id/textView2"
         android:textColor="#6c6c6c"
-        android:layout_marginTop="20dp"
         android:layout_marginBottom="0dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp" />
@@ -41,4 +43,5 @@
         android:layout_alignStart="@+id/textView2"
         android:layout_marginBottom="100dp"
         android:layout_marginLeft="10dp" />
+
 </RelativeLayout>
