--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -6,46 +6,81 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="#f2f2f2"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_login2"
     tools:context="com.jshikami235gmail.pataride.login">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/tv_mail"
+        android:id="@+id/textView14"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/email_l"
+        android:layout_toStartOf="@+id/email_l"
+        android:layout_marginTop="20dp"
+        android:textColor="#6c6c6c" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:ems="10"
-        android:hint="@string/hint"
-        android:textColor="#6c6c6c"
         android:id="@+id/email_l"
-        android:layout_alignLeft="@+id/pwd_l"
-        android:layout_alignStart="@+id/pwd_l" />
+        android:layout_below="@+id/textView14"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="15dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/tv_pswd"
+        android:id="@+id/textView15"
+        android:layout_below="@+id/email_l"
+        android:layout_alignLeft="@+id/textView14"
+        android:layout_alignStart="@+id/textView14"
+        android:layout_marginBottom="0dp"
+        android:textColor="#6c6c6c" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:textColor="#6c6c6c"
         android:id="@+id/pwd_l"
-        android:hint="@string/pwd_hint"
-        android:layout_marginTop="50dp"
-        android:layout_below="@+id/email_l"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/textView15"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/sign_In"
-        android:onClick="onClick"
-        android:textColor="#fff"
+        android:text="Sign in"
         android:background="#d15351"
         android:id="@+id/btn_signIn"
-        android:layout_below="@+id/pwd_l"
+        android:layout_centerVertical="true"
         android:layout_alignLeft="@+id/pwd_l"
         android:layout_alignStart="@+id/pwd_l"
-        android:layout_marginTop="53dp"
         android:layout_alignRight="@+id/pwd_l"
-        android:layout_alignEnd="@+id/pwd_l" />
+        android:layout_alignEnd="@+id/pwd_l"
+        android:textColor="#fff"
+        android:layout_marginBottom="20dp" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Not signed up?"
+        android:id="@+id/btnLinkToSignInScreen"
+        android:background="#fcfcfc"
+        android:textColor="#6c6c6c"
+        android:layout_below="@+id/btn_signIn"
+        android:layout_alignRight="@+id/btn_signIn"
+        android:layout_alignEnd="@+id/btn_signIn"
+        android:layout_alignLeft="@+id/btn_signIn"
+        android:layout_alignStart="@+id/btn_signIn" />
 
 </RelativeLayout>
