--- a/app/src/main/res/layout/content_signup.xml
+++ b/app/src/main/res/layout/content_signup.xml
@@ -9,6 +9,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#f2f2f2"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_signup_trial"
     tools:context="com.jshikami235gmail.pataride.Sign_up">
@@ -90,8 +91,5 @@
         android:layout_alignStart="@+id/etPassword"
         android:clickable="true"
         android:onClick="onClick" />
-
-
-
 </RelativeLayout>
     </ScrollView>
