--- a/app/src/main/res/layout/content_thanks.xml
+++ b/app/src/main/res/layout/content_thanks.xml
@@ -6,6 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="#f2f2f2"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_thanks2"
     tools:context="com.jshikami235gmail.pataride.thanks">
